# ipconfig

./: .gitignore  main.py  pyproject.toml
ipconfig/: main.py
